--- a/package.json
+++ b/package.json
@@ -10,13 +10,21 @@
   "dependencies": {
     "@google-cloud/speech": "^4.1.0",
     "@google-cloud/storage": "^5.1.1",
+    "@react-native-community/cameraroll": "^4.0.0",
+    "@react-native-community/cli": "^4.10.1",
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/bottom-tabs": "^5.6.1",
     "@react-navigation/material-top-tabs": "^5.2.12",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
+    "axios": "^0.19.2",
     "base-64": "^0.1.0",
+    "cors": "^2.8.5",
     "expo": "~37.0.3",
+    "expo-av": "~8.1.0",
+    "expo-image-picker": "~8.1.0",
+    "expo-media-library": "~8.1.0",
+    "expo-permissions": "~8.1.0",
     "firebase": "7.9.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -27,6 +35,8 @@
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-tab-view": "^2.14.4",
+    "react-native-vector-icons": "^6.6.0",
+    "react-native-video": "^4.4.5",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.4.0",
     "react-navigation-tabs": "^2.9.0"
