--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "cors": "^2.8.5",
     "expo": "~37.0.3",
     "expo-av": "~8.1.0",
+    "expo-file-system": "~8.1.0",
     "expo-image-picker": "~8.1.0",
     "expo-media-library": "~8.1.0",
     "expo-permissions": "~8.1.0",
     "firebase": "7.9.0",
+    "fs": "^0.0.1-security",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
