--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.0.20",
     "@google-cloud/speech": "^4.1.0",
     "@google-cloud/storage": "^5.1.1",
     "@react-native-community/cameraroll": "^4.0.0",
@@ -17,6 +18,7 @@
     "@react-navigation/material-top-tabs": "^5.2.12",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
+    "audio": "^1.2.0",
     "axios": "^0.19.2",
     "base-64": "^0.1.0",
     "cors": "^2.8.5",
@@ -26,7 +28,10 @@
     "expo-image-picker": "~8.1.0",
     "expo-media-library": "~8.1.0",
     "expo-permissions": "~8.1.0",
+    "express": "^4.17.1",
     "firebase": "7.9.0",
+    "fluent-ffmpeg": "^2.1.2",
+    "formidable": "^1.2.2",
     "fs": "^0.0.1-security",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
