--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/material-top-tabs": "^5.2.12",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
+    "@types/prop-types": "^15.7.3",
     "audio": "^1.2.0",
     "axios": "^0.19.2",
     "base-64": "^0.1.0",
@@ -51,7 +52,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "babel-preset-expo": "~8.1.0"
+    "@types/react": "^16.9.44",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-native": "^0.63.2",
+    "babel-preset-expo": "~8.1.0",
+    "typescript": "^3.9.7"
   },
   "private": true
 }
