--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.19.2",
     "base-64": "^0.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "expo": "~37.0.3",
     "expo-av": "~8.1.0",
     "expo-file-system": "~8.1.0",
